--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -39,6 +39,8 @@
 #waybar {
     /* background: #323232; */
     /* color: white; */
+
+    border-top: 1px solid rgba(255, 255, 255, 0.12);
     font-family: Cantarell, Noto Sans, sans-serif;
     font-size: 13px;
 
@@ -167,22 +169,54 @@
     font-weight: bold;
 }
 
+#workspaces {
+  margin: 0 6px
+}
+
 #workspaces button {
-    border-top: 2px solid transparent;
+   padding: 4px 12px;
+    margin: 4px 4px;
+
+    border-radius: 8px;
+    border: 1px solid transparent;
+
+    background: rgba(255, 255, 255, 0.04);
+    color: rgba(255, 255, 255, 0.65);
+
+    transition: all 120ms ease-out;
+
+    /* border-top: 2px solid transparent; */
     /* To compensate for the top border and still have vertical centering */
-    padding-bottom: 2px;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #888888;
+    /* padding-bottom: 2px; */
+    /* padding-left: 10px; */
+    /* padding-right: 10px; */
+    /* color: #ffffff; */
+}
+
+#workspaces button:hover {
+    background: rgba(255, 255, 255, 0.08);
+    color: rgba(255, 255, 255, 0.9);
 }
 
 #workspaces button.focused {
-    border-color: #4c7899;
-    color: white;
-    background-color: #285577;
+   background: rgba(255, 255, 255, 0.18);
+    border: 1px solid rgba(255, 255, 255, 0.35);
+    color: #ffffff;
+
+    box-shadow:
+        0 1px 2px rgba(0, 0, 0, 0.4),
+        inset 0 1px rgba(255, 255, 255, 0.25);
+
+    /* border-color: #4c7899; */
+    /* color: white; */
+    /* background-color: #285577; */
+    /* opacity: 0.5 */
 }
 
 #workspaces button.urgent {
-    border-color: #c9545d;
-    color: #c9545d;
+  background: rgba(255, 80, 80, 0.25);
+    border: 1px solid rgba(255, 80, 80, 0.6);
+    color: #ffffff;
+    /* border-color: #c9545d; */
+    /* color: #c9545d; */
 }
